[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/items/m_Item2.png" type="Texture" id=1]
[ext_resource path="res://menu/items/m_Icon_Play.png" type="Texture" id=2]
[ext_resource path="res://menu/items/expanded.png" type="Texture" id=3]
[ext_resource path="res://menu/choose character/choose_character.gd" type="Script" id=4]
[ext_resource path="res://menu/items/m_Item5.png" type="Texture" id=5]
[ext_resource path="res://menu/items/m_back.png" type="Texture" id=6]
[ext_resource path="res://menu/items/m_Item4.png" type="Texture" id=7]
[ext_resource path="res://style/Fonts/deafult_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://player/маг1.png" type="Texture" id=9]
[ext_resource path="res://player/маг3.png" type="Texture" id=10]
[ext_resource path="res://player/маг2.png" type="Texture" id=11]
[ext_resource path="res://style/Fonts/font.tres" type="DynamicFont" id=12]

[node name="choose_character" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.0
margin_top = 9.0
margin_right = 76.0
margin_bottom = 29.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="background/TextureRect"]
margin_left = 21.0
margin_right = 136.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Выберите персонажа"

[node name="back" type="Button" parent="background"]
margin_left = 21.0
margin_top = 127.0
margin_right = 53.0
margin_bottom = 153.0
icon = ExtResource( 6 )
flat = true

[node name="choose" type="Button" parent="background"]
margin_left = 268.0
margin_top = 127.0
margin_right = 300.0
margin_bottom = 153.0
icon = ExtResource( 2 )
flat = true

[node name="character1" type="Button" parent="background"]
margin_left = 52.0
margin_top = 54.0
margin_right = 114.0
margin_bottom = 110.0
icon = ExtResource( 7 )
flat = true

[node name="character2" type="Button" parent="background"]
margin_left = 129.0
margin_top = 54.0
margin_right = 191.0
margin_bottom = 110.0
icon = ExtResource( 7 )
flat = true

[node name="character3" type="Button" parent="background"]
margin_left = 207.0
margin_top = 54.0
margin_right = 269.0
margin_bottom = 110.0
icon = ExtResource( 7 )
flat = true

[node name="TextureRect2" type="TextureRect" parent="background"]
margin_left = 80.0
margin_top = 124.0
margin_right = 240.0
margin_bottom = 159.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="background/TextureRect2"]
margin_left = 8.0
margin_top = 11.0
margin_right = 151.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="background"]
position = Vector2( 112, 128 )
scale = Vector2( 1.39352, 1.53125 )
texture = ExtResource( 9 )
offset = Vector2( -20.8106, -29.3878 )

[node name="Sprite2" type="Sprite" parent="background"]
position = Vector2( 237, 83 )
scale = Vector2( 1.36111, 1.46875 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="background"]
position = Vector2( 189, 127 )
scale = Vector2( 1.39352, 1.53125 )
texture = ExtResource( 11 )
offset = Vector2( -20.8106, -29.3878 )

[connection signal="character1" from="." to="." method="_on_choose_character_character1"]
[connection signal="character2" from="." to="." method="_on_choose_character_character2"]
[connection signal="character3" from="." to="." method="_on_choose_character_character3"]
[connection signal="pressed" from="background/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="background/choose" to="." method="_on_choose_pressed"]
[connection signal="pressed" from="background/character1" to="." method="_on_character1_pressed"]
[connection signal="pressed" from="background/character2" to="." method="_on_character2_pressed"]
[connection signal="pressed" from="background/character3" to="." method="_on_character3_pressed"]
